--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body{
 }
 
 body{
-    background: url(bg.jpeg) no-repeat center fixed;
+    background: url(assets/bg.jpeg) no-repeat center fixed;
     background-size: cover;
 
 }
